# LipTypeV2

./: .gitignore  CLI_RUNBOOK.md  Dockerfile  NVIDIA_GPU_SETUP.md  POST_ERROR_CORRECTION_ARCHITECTURE.md  REBUILD.md  REBUILD_PARALLEL_TFRECORDS.md  WINDOWS_SETUP.md  pyproject.toml
Lav_SilentSpeechClips/: video_phrase_mapping.txt
LipType/: setup.py
configs/: decode_kenlm_grid.yaml  gladnet_example.yaml  gladnet_train.yaml  grid_lipnet_style.yaml  grid_split_80_10_10_random42.yaml  grid_split_example.yaml  grid_split_overlapped_255_holdout_1_2_20_22.yaml  grid_split_smoke.yaml  liptype_grid.yaml  liptype_grid_autoavsr.yaml  liptype_grid_paper_preproc.yaml  liptype_smoke.yaml  liptype_test_ver1ver4_eval.yaml  liptype_testday_eval.yaml  liptype_train.yaml  liptype_v10_exact_finetune.yaml  paper_preproc_grid.yaml
envs/: liptype_gladnet_tf210_gpu.yml  liptype_paper_preproc_win.yml  liptype_tf220_gpu.yml
preprcoessing/: main.py  model.py
rebuild_data/tfrecords_grid_paper_copy/: meta.json
rebuild_data/tfrecords_liptype_test_aligned_ver10/: meta.json
rebuild_data/tfrecords_liptype_test_ver10/: meta.json
rebuild_data/tfrecords_liptype_test_ver1ver4/: meta.json
rebuild_data/tfrecords_overlapped255/: meta.json
scripts/: README.md  autoavsr_crop_mouth_batch.py  build_grid_char_lm_corpus.py  build_kenlm_5gram.sh  grid_to_tfrecords_parallel.py  random_val_decode.py  train_v10_exact_finetune.sbatch
src/liptype_rebuild/: __init__.py
tests/: conftest.py  test_align_labels.py  test_cli_imports.py  test_levenshtein.py  test_placeholder.py  test_postprocess_lm.py
(+52 files in other folders)
